# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md
Assets/Actors/Skull/: actor.json
Assets/Models/Skull/: Skull.mtl  model.json
Assets/Shaders/Frag/: model.frag  triangle.frag
Assets/Shaders/Vert/: model.vert  triangle.vert
Assets/Textures/Fence003_4K-JPG/: Fence003_4K-JPG.usda  Fence003_4K-JPG.usdc
Assets/Textures/Fence007C_4K-JPG/: Fence007C_4K-JPG.usda  Fence007C_4K-JPG.usdc
Assets/Textures/Grass/: Grass001_4K-JPG.usda  Grass001_4K-JPG.usdc
Source/: Vulk.cpp  Vulk.h  main.cpp
Source/Common/: ClassMovableOnly.h  ClassNonCopyableNonMovable.h
Source/Samples/: Blending.h  LandAndWaves.h  Lighting.h  LitLandAndWaves.h  MirrorWorld.h  OutlineWorld.h  PlanarShadowWorld.h  SampleRunner.h  Scene.h  ShapeGeometry.h  TexturedScene.h  VikingRoom.h
Source/Shaders/Common/: common.glsl
Source/Shaders/Frag/: LitMirror.frag  LitModel.frag  Outline.frag  blending.frag  instance.frag  light.frag  litTerrain.frag  litTexturedTerrain.frag  litTexturedWaves.frag  litwaves.frag  normals.frag  terrain.frag  triangle.frag  waves.frag
Source/Shaders/Geom/: normals.geom
Source/Shaders/Vert/: LitMirroredModel.vert  LitModel.vert  Outline.vert  blending.vert  instance.vert  light.vert  litTexturedTerrain.vert  litTexturedWaves.vert  litwaves.vert  model.vert  normals.vert  terrain.vert  viking.vert  waves.vert
Source/Tools/MSVC/: glm.natvis
Source/Vulk/: Vulk.cpp  Vulk.h  VulkActor.cpp  VulkActor.h  VulkBufferBuilder.h  VulkCamera.cpp  VulkCamera.h  VulkDescriptorPoolBuilder.h  VulkDescriptorSet.h  VulkDescriptorSetBuilder.h  VulkDescriptorSetLayoutBuilder.cpp  VulkDescriptorSetLayoutBuilder.h  VulkDescriptorSetUpdater.cpp  VulkDescriptorSetUpdater.h  VulkFrameUBOs.h  VulkGeo.cpp  VulkGeo.h  VulkMesh.cpp  VulkMesh.h  VulkMeshRender.h  VulkPipelineBuilder.cpp  VulkPipelineBuilder.h  VulkPipelineState.h  VulkResources.cpp  VulkResources.h  VulkStorageBuffer.h  VulkTextureView.cpp  VulkTextureView.h  VulkUniformBuffer.h  VulkUtil.cpp  VulkUtil.h
Source/Vulk/private/: VulkResourceMetadata.h
